styles.css
body{
    background-image: url(stickman_crossroads_new.jpg);
    background-repeat: no-repeat;
    background-position: top;
    background-attachment: fixed;
    background-size: cover;
}

/*Positioning of Group A,B,C */
.group-container {
  display: flex;
  justify-content: space-evenly;
  align-items: baseline;
}

/* Content of Group A,B,C*/
.groups {
  height: 100px;
  width: 100px;
  padding: 20px;
  margin: 50px;
  border: 10px solid black; 
  background-color: white;
  color: red;
}

#group_A{
    background-image: url(stickman_social.jpeg);
    background-repeat: no-repeat;
    background-size: 210px;
    background-position: center;
    height: 100px;
        width: 100px;
        padding: 20px;
        margin: 50px;
        border: 10px solid black;
}

#group_B {
    background-image: url(stickman_school_new.png);
    background-repeat: no-repeat;
    background-size: 131px;
    background-position: center;
    height: 100px;
    width: 100px;
    padding: 20px;
    margin: 50px;
    border: 10px solid black;
}

#group_C {
    background-image: url(stickman_health.png);
    background-repeat: no-repeat;
    background-size: 107px;
    background-position: center;
    height: 100px;
    width: 100px;
    padding: 20px;
    margin: 50px;
    border: 10px solid black;
}

/*Positioning of Prompt Box */
.textBox-container {
  display: flex;
  justify-content: space-evenly;
  align-items: baseline;
}

/*Content of Prompt Box */
#textBox {
  height: 100px;
  width: 400px;
  padding: 40px;
  margin: 60px;
  border: 10px solid black;
  border-radius: 10px;
  background-color: yellow;
  color: red;
}

/*Positioning of Choice Buttons */
.choices-container {
  display: flex;
  justify-content: space-evenly;
  align-items: baseline;
}

/* Content of Btn 1*/
#choice_1 {
  padding: 10px;
  color: black;
}
/* Content of Btn 2*/
#choice_2 {
  padding: 10px;
  color: green;
}

#choice_expanded {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 25vh;
}

#choice_expanded p {
  max-width: 600px; /* Adjust the maximum width based on your design */
  margin: 0 auto;
}

